--- a/layouts/_default/termine.html
+++ b/layouts/_default/termine.html
@@ -10,6 +10,10 @@
 </body>
 </html>
 
+{{ define "main-top" }}
+<center><a style="font-size: 70px; gap: 0px; font-family:'Trebuchet MS', Arial, Helvetica, sans-serif;">AKTUELLES</a></center>
+{{ end }}
+
 {{ define "main" }}
 
 <table class="table">
