--- a/layouts/_default/schuelerinnen.html
+++ b/layouts/_default/schuelerinnen.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{{ define "main-top" }}
+<center><a style="font-size: 70px; gap: 0px; font-family:'Trebuchet MS', Arial, Helvetica, sans-serif; color: #369BC9;">SCHÜLER/INNEN</a></center>
+{{ end }}
+
 
 {{ define "main" }}
-    .
+    4a:
 {{ end }}
