--- a/layouts/_default/termine.html
+++ b/layouts/_default/termine.html
@@ -11,7 +11,7 @@
 </html>
 
 {{ define "main-top" }}
-<center><a style="font-size: 70px; gap: 0px; font-family:'Trebuchet MS', Arial, Helvetica, sans-serif;">AKTUELLES</a></center>
+<center><a style="font-size: 70px; gap: 0px; font-family:'Trebuchet MS', Arial, Helvetica, sans-serif; color: #369BC9;">TERMINE</a></center>
 {{ end }}
 
 {{ define "main" }}
