--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,11 +23,12 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,300,0,0" />
         {{ $icon := resources.Get "img/icon.ico" }}
         <link rel="icon" href="{{ $icon.RelPermalink }}">
+        {{ $sunicon := resources.Get "img/light-mode.png" }}
     </head>
 
     <body>
         <div id="main-wrapper">
-            <div id="aktuell"><a href="/hsz" style="color: white;"><span class="material-symbols-outlined" id="btnside">home</span></a></div>
+            <div id="aktuell"><a href="/hsz"><span class="material-symbols-outlined" id="btnside">home</span></a></div>
             <div id="lehrer">
                 <nav class="navbar">
 	                <ul>
@@ -87,11 +88,12 @@
 	                </ul>
                 </nav>
             </div>
+            <div id="colortheme"><a><button id="icon" onclick="darklightmode()" style="background-color:transparent; border:transparent;"><span class="material-symbols-outlined" id="colorbutton">dark_mode</span></button></a></div>
             <div id="chronik"><a href="chronik.php"><span class="material-symbols-outlined" id="btnside">language</span></a></div>
             <div id="impressum"><a href="impressum.php"><span class="material-symbols-outlined" id="btnside">Library_Books</span></a></div>
             <div id="intern"><a href="intern.php"><span class="material-symbols-outlined" id="btnside">Captive_Portal</span></a></div>
             <div id="btext">Demnächst</div>
-            <div id="fetured">fetured</div>
+            <div id="fetured"></div>
             <div id="datenschutz"><a href=""><span class="material-symbols-outlined" id="btnside">policy</span></a></div>
             <div id="name-bild" class="logo-image">
                 <center>
@@ -116,3 +118,28 @@
         </div>
     </body>
 </html>
+<script type="text/javascript">
+    colorbutton = document.getElementById("colorbutton");
+    var GetTheme = JSON.parse(localStorage.getItem("ColorTheme"));
+            
+    function darklightmode() {
+        document.body.classList.toggle("light-theme");
+        if(document.body.classList.contains("light-theme")) {
+            icon.src = "{{ $sunicon.RelPermalink }}"
+            theme = "light";
+            colorbutton = document.getElementById("colorbutton");
+            colorbutton.textContent="light_mode";
+        }else {
+            theme = "dark";
+            colorbutton = document.getElementById("colorbutton");
+            colorbutton.textContent="dark_mode";
+        }
+        localStorage.setItem("ColorTheme", JSON.stringify(theme))
+        }
+    var GetTheme = JSON.parse(localStorage.getItem("ColorTheme"));
+    if (GetTheme === "light") {
+        document.body.classList.toggle("light-theme");
+        console.log(colorbutton)
+        colorbutton.textContent="light_mode";
+    }
+</script>
